# ideabase

./: .gitignore  Caddyfile  README.md  deployment-guide.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  ideabase-nginx.conf  ideabase.service  install-service.sh  manage.sh  setup-nginx.sh
backend/: .env.example  Dockerfile  Dockerfile.celery  README.md  alembic.ini  celerybeat-schedule  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: init_schema.py
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  projects.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  init_db.py
backend/app/models/: project.py
backend/app/schemas/: project.py
backend/app/services/: analysis_service.py
backend/app/services/ai/: __init__.py  analyzer.py
backend/app/services/github/: __init__.py  scraper.py
backend/app/tasks/: analyze_projects.py  scrape_trending.py
frontend/: .eslintrc.js  Dockerfile  README.md  next-i18next.config.js  next.config.js  package.json  tailwind.config.js
frontend/public/locales/en/: common.json
frontend/public/locales/zh/: common.json
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/components/features/: ProjectCard.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: [...slug].tsx  _app.tsx  api-docs.tsx  index.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
